--- a/TwitterFavImageSave/Properties/Settings.settings
+++ b/TwitterFavImageSave/Properties/Settings.settings
@@ -1,7 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TwitterFavImageSave.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="AccessToken" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AccessTokenSecret" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="TwitterApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">krarGdfvw43Mr2Pb7w5m9sxYT</Value>
+    </Setting>
+    <Setting Name="TwitterApiSecret" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Za7jaCg8kq18Kz4UwaYFXv12IwGrVMJW59LwfjmHJprVadFhZD</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
