--- a/TwitterFavImageSave/TwitterFavImageSave.csproj
+++ b/TwitterFavImageSave/TwitterFavImageSave.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Common\CustomDataObject.cs" />
     <Compile Include="Common\DataFormat.cs" />
     <Compile Include="Common\XamlConverter.cs" />
     <Compile Include="Common\XmlConverter.cs" />
